# swift

./: CMakeLists.txt  events.cpp  events.h  graphics.cpp  graphics.h  main.cpp
nms/: external dependancies here
nms/glad/include/glad/: gl.h  glad.h
nms/glad/src/: glad.c
shaders/: main.fs  main.vs
what/: CMakeCache.txt  Makefile  cmake_install.cmake
what/CMAKE_BINARY_DIR/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
what/CMAKE_BINARY_DIR/docs/: Doxyfile  Makefile  cmake_install.cmake
what/CMAKE_BINARY_DIR/src/: Makefile  cmake_install.cmake
